--- a/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
+++ b/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Adminitrativo.h" />
+    <ClInclude Include="Aeropuerto.h" />
     <ClInclude Include="AviacionCivil.h" />
     <ClInclude Include="AviacionMilitar.h" />
     <ClInclude Include="Avion.h" />
@@ -138,10 +139,13 @@
     <ClInclude Include="Copiloto.h" />
     <ClInclude Include="Empleado.h" />
     <ClInclude Include="Fecha.h" />
+    <ClInclude Include="InterfazEmpleado.h" />
     <ClInclude Include="ListaAviones.h" />
+    <ClInclude Include="ListaContratos.h" />
     <ClInclude Include="ListaEmpleados.h" />
     <ClInclude Include="Miscelaneo.h" />
     <ClInclude Include="NodoAvion.h" />
+    <ClInclude Include="NodoContrato.h" />
     <ClInclude Include="NodoEmpleado.h" />
     <ClInclude Include="Piloto.h" />
     <ClInclude Include="Planta.h" />
@@ -154,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Adminitrativo.cpp" />
+    <ClCompile Include="Aeropuerto.cpp" />
     <ClCompile Include="AviacionCivil.cpp" />
     <ClCompile Include="AviacionMilitar.cpp" />
     <ClCompile Include="Avion.cpp" />
@@ -164,10 +169,13 @@
     <ClCompile Include="Copiloto.cpp" />
     <ClCompile Include="Empleado.cpp" />
     <ClCompile Include="Fecha.cpp" />
+    <ClCompile Include="InterfazEmpleado.cpp" />
     <ClCompile Include="ListaAviones.cpp" />
+    <ClCompile Include="ListaContratos.cpp" />
     <ClCompile Include="ListaEmpleados.cpp" />
     <ClCompile Include="Miscelaneo.cpp" />
     <ClCompile Include="NodoAvion.cpp" />
+    <ClCompile Include="NodoContrato.cpp" />
     <ClCompile Include="NodoEmpleado.cpp" />
     <ClCompile Include="Piloto.cpp" />
     <ClCompile Include="Planta.cpp" />
