--- a/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
+++ b/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
@@ -139,10 +139,12 @@
     <ClInclude Include="Copiloto.h" />
     <ClInclude Include="Empleado.h" />
     <ClInclude Include="Fecha.h" />
+    <ClInclude Include="InterfazAvion.h" />
     <ClInclude Include="InterfazEmpleado.h" />
     <ClInclude Include="ListaAviones.h" />
     <ClInclude Include="ListaContratos.h" />
     <ClInclude Include="ListaEmpleados.h" />
+    <ClInclude Include="MensajesGenerales.h" />
     <ClInclude Include="MenuPrincipal.h" />
     <ClInclude Include="Miscelaneo.h" />
     <ClInclude Include="NodoAvion.h" />
@@ -170,10 +172,12 @@
     <ClCompile Include="Copiloto.cpp" />
     <ClCompile Include="Empleado.cpp" />
     <ClCompile Include="Fecha.cpp" />
+    <ClCompile Include="InterfazAvion.cpp" />
     <ClCompile Include="InterfazEmpleado.cpp" />
     <ClCompile Include="ListaAviones.cpp" />
     <ClCompile Include="ListaContratos.cpp" />
     <ClCompile Include="ListaEmpleados.cpp" />
+    <ClCompile Include="MensajesGenerales.cpp" />
     <ClCompile Include="MenuPrincipal.cpp" />
     <ClCompile Include="Miscelaneo.cpp" />
     <ClCompile Include="NodoAvion.cpp" />
