Lista plaza con su conteo, toString de contratos

--- a/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
+++ b/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
@@ -145,12 +145,14 @@
     <ClInclude Include="ListaAviones.h" />
     <ClInclude Include="ListaContratos.h" />
     <ClInclude Include="ListaEmpleados.h" />
+    <ClInclude Include="ListaPlaza.h" />
     <ClInclude Include="MensajesGenerales.h" />
     <ClInclude Include="MenuPrincipal.h" />
     <ClInclude Include="Miscelaneo.h" />
     <ClInclude Include="NodoAvion.h" />
     <ClInclude Include="NodoContrato.h" />
     <ClInclude Include="NodoEmpleado.h" />
+    <ClInclude Include="NodoPlaza.h" />
     <ClInclude Include="Piloto.h" />
     <ClInclude Include="Planta.h" />
     <ClInclude Include="Plaza.h" />
@@ -179,12 +181,14 @@
     <ClCompile Include="ListaAviones.cpp" />
     <ClCompile Include="ListaContratos.cpp" />
     <ClCompile Include="ListaEmpleados.cpp" />
+    <ClCompile Include="ListaPlaza.cpp" />
     <ClCompile Include="MensajesGenerales.cpp" />
     <ClCompile Include="MenuPrincipal.cpp" />
     <ClCompile Include="Miscelaneo.cpp" />
     <ClCompile Include="NodoAvion.cpp" />
     <ClCompile Include="NodoContrato.cpp" />
     <ClCompile Include="NodoEmpleado.cpp" />
+    <ClCompile Include="NodoPlaza.cpp" />
     <ClCompile Include="Piloto.cpp" />
     <ClCompile Include="Planta.cpp" />
     <ClCompile Include="Plaza.cpp" />
