--- a/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj.filters
+++ b/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClInclude Include="InterfazContrato.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NodoPlaza.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ListaPlaza.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TablaAviones.cpp">
@@ -210,6 +216,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="InterfazContrato.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NodoPlaza.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ListaPlaza.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
