se añadieron controladoras, en la principal.cpp esta en comentarios todo en el metodo de cambiar nombre de plaza se cambio

--- a/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
+++ b/Proyecto-Aeropuerto/Proyecto-Aeropuerto.vcxproj
@@ -136,11 +136,18 @@
     <ClInclude Include="AvionDeCarga.h" />
     <ClInclude Include="Azafata.h" />
     <ClInclude Include="Contrato.h" />
+    <ClInclude Include="ControladoraAvion.h" />
+    <ClInclude Include="ControladoraConsultas.h" />
+    <ClInclude Include="ControladoraContrato.h" />
+    <ClInclude Include="ControladoraEmpleados.h" />
+    <ClInclude Include="ControladoraIngresos.h" />
+    <ClInclude Include="ControladoraMantenimiento.h" />
+    <ClInclude Include="ControladoraPrincipal.h" />
+    <ClInclude Include="ControladoraReportes.h" />
     <ClInclude Include="Copiloto.h" />
     <ClInclude Include="Empleado.h" />
     <ClInclude Include="Fecha.h" />
     <ClInclude Include="InterfazAvion.h" />
-    <ClInclude Include="InterfazCargaDescarga.h" />
     <ClInclude Include="InterfazContrato.h" />
     <ClInclude Include="InterfazEmpleado.h" />
     <ClInclude Include="InterfazReporteConsulta.h" />
@@ -175,11 +182,18 @@
     <ClCompile Include="AvionDeCarga.cpp" />
     <ClCompile Include="Azafata.cpp" />
     <ClCompile Include="Contrato.cpp" />
+    <ClCompile Include="ControladoraAvion.cpp" />
+    <ClCompile Include="ControladoraConsultas.cpp" />
+    <ClCompile Include="ControladoraContrato.cpp" />
+    <ClCompile Include="ControladoraEmpleados.cpp" />
+    <ClCompile Include="ControladoraIngresos.cpp" />
+    <ClCompile Include="ControladoraMantenimiento.cpp" />
+    <ClCompile Include="ControladoraPrincipal.cpp" />
+    <ClCompile Include="ControladoraReportes.cpp" />
     <ClCompile Include="Copiloto.cpp" />
     <ClCompile Include="Empleado.cpp" />
     <ClCompile Include="Fecha.cpp" />
     <ClCompile Include="InterfazAvion.cpp" />
-    <ClCompile Include="InterfazCargaDescarga.cpp" />
     <ClCompile Include="InterfazContrato.cpp" />
     <ClCompile Include="InterfazEmpleado.cpp" />
     <ClCompile Include="InterfazReporteConsulta.cpp" />
